--- a/DesignerRHN/DesignerRHN-war/web/Barra.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/Barra.xhtml
@@ -11,6 +11,7 @@
         <ui:composition template="/Template.xhtml">
             <ui:define name="body">                  
                 <h:form id="form"> 
+                    <p:growl id="growl" />
                     <p:panel  id="PanelTotal" header="Generar Liquidación" style=" font-size: 12px; position: absolute; width: 874px; height: 530px; text-align: left" >  
                         <fieldset style="position: absolute; left: 10px; top: 60px; font-size: 12px; width: 500px; height: 450px; border-radius: 10px; ">
                             <legend style="font-size: 14px; color: blue;text-align: left; font-weight: bold">Progreso de Liquidación</legend>
@@ -23,9 +24,9 @@
                                     <h:outputText value="Total trabajadores liquidados: " style="font-weight: bold; position: absolute; top: 52px; left: 20px"/>
                                     <p:inputText id="empleadosLiquidados" value="#{controlBarra.totalEmpleadosLiquidados}" style="position: absolute; left: 210px; text-align: right; width: 80px; top: 50px" readonly="true" /> 
                                     <h:outputText value="Hora inicial liquidación: " style="font-weight: bold; position: absolute; left: 20px; top: 83px"/>
-                                    <p:inputText value="--:--:--" style="position: absolute; left: 210px; text-align: right; width: 80px; top: 82px" readonly="true"/>
+                                    <p:inputText id="horaI" value="#{controlBarra.horaInicialLiquidacion}" style="position: absolute; left: 210px; text-align: right; width: 80px; top: 82px" readonly="true"/>
                                     <h:outputText value="Hora final liquidación: " style="font-weight: bold; position: absolute; top: 115px; left: 20px"/>
-                                    <p:inputText value="--:--:--" style="position: absolute; left: 210px; text-align: right; width: 80px; top: 114px" readonly="true" /> 
+                                    <p:inputText id="horaF" value="#{controlBarra.horaFinalLiquidacion}" style="position: absolute; left: 210px; text-align: right; width: 80px; top: 114px" readonly="true" /> 
                                 </fieldset>
                             </p:panel>
 
@@ -49,20 +50,25 @@
 
                                 <fieldset style="position: absolute; left: 10px; top: 303px; font-size: 12px; width: 470px; height: 60px; border: inset; border-width: 2px">
                                     <h:outputText value="Progreso de liquidación: " style="font-weight: bold; position: absolute; top: 10px; left: 10px"/>
-                                    <p:progressBar id="pbAjax" widgetVar="pbAjax"  ajax="true" value="#{controlBarra.barra}"  labelTemplate="{value}%" styleClass="animated" interval="800" style="position: relative; top: 25px">
-                                        <p:ajax event="complete" update="@this"/>  
+                                    <p:progressBar id="barra" widgetVar="barra"  ajax="true" value="#{controlBarra.barra}"  labelTemplate="{value}%" styleClass="animated" interval="500" style="position: relative; top: 25px">
+                                        <p:ajax event="complete" listener="#{controlBarra.liquidacionCompleta()}" update="growl"/>  
                                     </p:progressBar>
                                     <h:outputText value="Oprima el boton liquidar para iniciar" style="font-weight: bold; position: absolute; top: 50px; left: 10px; color: blue"/>
                                 </fieldset>
                             </p:panel>
-                            <p:commandButton value="[ Liquidar ]"  actionListener="#{controlBarra.liquidar()}" style="position: absolute; top: 385px; font-size: 16px; width: 340px; height: 35px; border-color: #203A8E; border-width: 2px"/>
-                            <p:commandButton value="[Rep. Control]" actionListener="#{controlBarra.limpiarbarra()}" immediate="true"  oncomplete="pbAjax.start();" style="position: absolute; top: 385px; font-size: 14px; width: 154px; height: 35px; left: 350px; border-color: #203A8E; border-width: 2px"/>
-                            <p:commandButton value="Cancelar"  style="position: absolute; top: 423px; font-size: 12px; width: 130px; border-color: #B61B26; border-width: 2px"/>
+                            <p:commandButton value="[ Liquidar ]"  actionListener="#{controlBarra.liquidar()}" oncomplete="barra.start();" style="position: absolute; top: 385px; font-size: 16px; width: 340px; height: 35px; border-color: #203A8E; border-width: 2px"/>
+                            <p:commandButton value="[Rep. Control]" style="position: absolute; top: 385px; font-size: 14px; width: 154px; height: 35px; left: 350px; border-color: #203A8E; border-width: 2px"/>
+                            <p:commandButton value="Cancelar" actionListener="#{controlBarra.cancelarLiquidacion()}" oncomplete="barra.cancel();"  style="position: absolute; top: 423px; font-size: 12px; width: 130px; border-color: #B61B26; border-width: 2px"/>
                             <p:commandButton value="[Detalles de liquidación]"  style="position: absolute; top: 423px; font-size: 12px; left: 140px; width: 200px; border-color: #B61B26; border-width: 2px"/>
-                            <p:commandButton value="[Errores]"  style="position: absolute; top: 423px; font-size: 12px; width: 163px; left: 341px; border-color: #B61B26; border-width: 2px"/>
-
+                            <p:commandButton value="[Errores]" onclick="mensaje.show();"  style="position: absolute; top: 423px; font-size: 12px; width: 163px; left: 341px; border-color: #B61B26; border-width: 2px"/>
                         </fieldset>
                     </p:panel>
+
+                    <p:dialog id="mensaje" header="ATENCIÓN...!" widgetVar="mensaje"  resizable="false" draggable="false" modal="true" height="95" width="400px" style="font-size: 12px" closable="false">  
+                        <h:graphicImage value="Imagenes/alerta.jpg" width="70" height="50" style="position: absolute; left: 30px; top: 10px;"  />
+                        <h:outputText value="Chico E Alias  EwindMan" style="position: absolute; left: 100px; top: 20px; width: 300px;" />
+                        <p:commandButton value="Aceptar" onclick="mensaje.hide();" style="position: absolute; top: 60px; left: 300px" process="@this" />
+                    </p:dialog>
                 </h:form>
             </ui:define>
         </ui:composition>
