--- a/DesignerRHN/DesignerRHN-war/web/PruebasUnitariasComponentes.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/PruebasUnitariasComponentes.xhtml
@@ -8,8 +8,9 @@
     <h:head>
         <style type="text/css">
             .animated .ui-progressbar-value {
-                border:0px;
-                background-image: url("Imagenes/bar.gif"); 
+                border: 0px;
+                background-image: url("Imagenes/bar.gif");
+                padding: 0px;
             }
         </style>
     </h:head> 
@@ -22,7 +23,7 @@
                         startButton2.disable();" widgetVar="startButton2" />  
                 <p:commandButton value="Cancel" actionListener="#{controlPruebasUnitarias.cancel}" oncomplete="pbAjax.cancel();startButton2.enable();" />  
 
-                <p:progressBar id="barra" widgetVar="pbAjax" ajax="true" value="#{controlPruebasUnitarias.progress}" labelTemplate="{value}%" styleClass="animated" interval="500">  
+                <p:progressBar id="barra" rendered="true" widgetVar="pbAjax" ajax="true" value="#{controlPruebasUnitarias.progress}" labelTemplate="{value}%" styleClass="animated" interval="500">  
                     <p:ajax event="complete" listener="#{controlPruebasUnitarias.onComplete}" update="growl" oncomplete="startButton2.enable()"/>  
                 </p:progressBar>
                 <p:commandButton value="Accionelo" actionListener="#{controlPruebasUnitarias.cometalo()}"/>
