--- a/DesignerRHN/DesignerRHN-war/web/Barra.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/Barra.xhtml
@@ -13,9 +13,10 @@
                 <h:form id="form"> 
                     <p:growl id="growl" />
                     <p:panel  id="PanelTotal" header="Generar Liquidación" style=" font-size: 12px; position: absolute; width: 874px; height: 530px; text-align: left" >  
+                        <p:clock pattern="hh:mm:ss a"/>
                         <fieldset style="position: absolute; left: 10px; top: 60px; font-size: 12px; width: 500px; height: 450px; border-radius: 10px; ">
                             <legend style="font-size: 14px; color: blue;text-align: left; font-weight: bold">Progreso de Liquidación</legend>
-                            <p:commandButton value=" " style="background-image: url(Imagenes/nom_parametros.gif); width: 150px; height: 140px; background-repeat: no-repeat; background-size: 100% 100%;; z-index: 1; position: absolute; top: 23px; left: 20px"/>
+                            <h:outputText id="imagen" style="background-image: url(Imagenes/#{controlBarra.imagenEstado}); width: 150px; height: 140px; background-repeat: no-repeat; background-size: 100% 100%;; z-index: 1; position: absolute; top: 23px; left: 20px"/>
                             <p:panel id="panelInf" style="border: none;">
                                 <fieldset style="position: absolute; left: 180px; top: 15px; font-size: 12px; width: 300px; height: 137px; border-radius: 10px; ">
                                     <legend style="font-size: 14px; color: blue;text-align: left; font-weight: bold">Indicadores</legend>
@@ -50,16 +51,16 @@
 
                                 <fieldset style="position: absolute; left: 10px; top: 303px; font-size: 12px; width: 470px; height: 60px; border: inset; border-width: 2px">
                                     <h:outputText value="Progreso de liquidación: " style="font-weight: bold; position: absolute; top: 10px; left: 10px"/>
-                                    <p:progressBar id="barra" widgetVar="barra"  ajax="true" value="#{controlBarra.barra}"  labelTemplate="{value}%" styleClass="animated" interval="500" style="position: relative; top: 25px">
+                                    <p:progressBar id="barra" widgetVar="barra"  ajax="true" value="#{controlBarra.barra}"  labelTemplate="#{controlBarra.mensajeBarra}" styleClass="animated" interval="500" style="position: relative; top: 25px">
                                         <p:ajax event="complete" listener="#{controlBarra.liquidacionCompleta()}" update="growl"/>  
                                     </p:progressBar>
-                                    <h:outputText value="Oprima el boton liquidar para iniciar" style="font-weight: bold; position: absolute; top: 50px; left: 10px; color: blue"/>
+                                    <h:outputText id="estadoLiquidacion" value="#{controlBarra.mensajeEstado}" style="font-weight: bold; position: absolute; top: 50px; left: 10px; color: blue"/>
                                 </fieldset>
                             </p:panel>
-                            <p:commandButton value="[ Liquidar ]"  actionListener="#{controlBarra.liquidar()}" oncomplete="barra.start();" style="position: absolute; top: 385px; font-size: 16px; width: 340px; height: 35px; border-color: #203A8E; border-width: 2px"/>
+                            <p:commandButton id="liquidar" value="[ Liquidar ]"  actionListener="#{controlBarra.liquidar()}" disabled="#{controlBarra.botonLiquidar}" style="position: absolute; top: 385px; font-size: 16px; width: 340px; height: 35px; border-color: #203A8E; border-width: 2px"/>
                             <p:commandButton value="[Rep. Control]" style="position: absolute; top: 385px; font-size: 14px; width: 154px; height: 35px; left: 350px; border-color: #203A8E; border-width: 2px"/>
-                            <p:commandButton value="Cancelar" actionListener="#{controlBarra.cancelarLiquidacion()}" oncomplete="barra.cancel();"  style="position: absolute; top: 423px; font-size: 12px; width: 130px; border-color: #B61B26; border-width: 2px"/>
-                            <p:commandButton value="[Detalles de liquidación]"  style="position: absolute; top: 423px; font-size: 12px; left: 140px; width: 200px; border-color: #B61B26; border-width: 2px"/>
+                            <p:commandButton id="cancelar" value="Cancelar" actionListener="#{controlBarra.cancelarLiquidacion()}" disabled="#{controlBarra.botonCancelar}" style="position: absolute; top: 423px; font-size: 12px; width: 130px; border-color: #B61B26; border-width: 2px"/>
+                            <p:commandButton value="[Detalles de liquidación]" actionListener="#{controlBarra.actualizar()}"  style="position: absolute; top: 423px; font-size: 12px; left: 140px; width: 200px; border-color: #B61B26; border-width: 2px"/>
                             <p:commandButton value="[Errores]" onclick="mensaje.show();"  style="position: absolute; top: 423px; font-size: 12px; width: 163px; left: 341px; border-color: #B61B26; border-width: 2px"/>
                         </fieldset>
                     </p:panel>
